Merge pull request #4
* Aggiunta di metodi per gestire agenti fittizi nella simulazione, incl…

* Aggiunta di un renderer ASCII per visualizzare la simulazione e aggio…

* Aggiunta di metodi per generare cibo e ostacoli (non ancora usato) ne…

* Aggiornamento della versione di Java a 26 e configurazione delle dipe…